kubernetes/service-db.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres-db
  namespace: usermanager
spec:
  ports:
  - port: 5432
    targetPort: 5432
  clusterIP: None
  selector:
    app: postgres-db
