kubernetes/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: user-manager-service
  namespace: usermanager
spec:
  selector:
    app: usermanager
  ports:
  - protocol: TCP
    port: 8090
    targetPort: 8090
  type: ClusterIP
