kubernetes/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: user-manager-ingress
  namespace: usermanager
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
  - host: usermanager.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: user-manager-service
            port:
              number: 8090
